fixed bad flexbox gap

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body {
   height: 100%;
   justify-content: center;
   overflow: scroll;
+  align-content: flex-start;
 }
 
 .art-image {
